tests/semantic/function-type-checks/test.ghul
namespace Test is
    use Std = IO.Std;

    class Main is
        init() is
            let f_iii: (int, int) -> int = (i: int, j: int) -> int => i + j;
            let f_cc: (char) -> char = (c: char) -> char => c;
            let f_oo: (object) -> object = (o: object) -> object => o;

            let i: int = f_iii(123, 456);
            let o: object = f_oo("test");

            f_oo(123); // OK: 123 is assignable to object
            f_oo(f_oo); // OK: f_oo is assignable to object

            f_cc(123); // error: 123 is not assignable to char
            f_cc("hello"); // error: "hello" is not assignable to char

            f_iii("hello", 123);
            f_iii(123, "hello");

            f_oo("too", "many", "arguments");
            f_oo(); // error: not enough arguments

            "hello"(1234);
        si
    si
si